--- a/project.config
+++ b/project.config
@@ -9,3 +9,5 @@
 	matching = refs/heads/stable/nitrogen:refs/heads/stable/nitrogen
 [allowSuperproject "releng/autorelease"]
 	matching = refs/heads/stable/nitrogen:refs/heads/stable/nitrogen
+[submit]
+	action = rebase if necessary
