--- a/openflowjava/openflow-protocol-impl/pom.xml
+++ b/openflowjava/openflow-protocol-impl/pom.xml
@@ -20,19 +20,6 @@
     <build>
         <plugins>
             <plugin>
-              <groupId>org.apache.aries.blueprint</groupId>
-              <artifactId>blueprint-maven-plugin</artifactId>
-              <configuration>
-                <scanPaths>
-                  <!-- This is code migrated from openflowjava project and the java package
-                       does not match artifact groupId, we therefore need to override it.
-                  -->
-                  <scanPath>org.opendaylight.openflowjava</scanPath>
-                </scanPaths>
-              </configuration>
-
-            </plugin>
-            <plugin>
               <groupId>org.apache.felix</groupId>
               <artifactId>maven-bundle-plugin</artifactId>
               <extensions>true</extensions>
@@ -75,30 +62,34 @@
             <groupId>io.netty</groupId>
             <artifactId>netty-handler</artifactId>
         </dependency>
+
         <dependency>
-            <groupId>org.osgi</groupId>
-            <artifactId>org.osgi.core</artifactId>
+            <groupId>org.kohsuke.metainf-services</groupId>
+            <artifactId>metainf-services</artifactId>
         </dependency>
         <dependency>
-            <groupId>javax.inject</groupId>
+            <groupId>com.guicedee.services</groupId>
             <artifactId>javax.inject</artifactId>
             <optional>true</optional>
         </dependency>
         <dependency>
+            <groupId>org.osgi</groupId>
+            <artifactId>org.osgi.service.component.annotations</artifactId>
+        </dependency>
+        <dependency>
             <groupId>javax.annotation</groupId>
             <artifactId>javax.annotation-api</artifactId>
+            <scope>provided</scope>
             <optional>true</optional>
         </dependency>
+
         <dependency>
-            <groupId>org.apache.aries.blueprint</groupId>
-            <artifactId>blueprint-maven-plugin-annotation</artifactId>
-            <optional>true</optional>
-        </dependency>
-        <dependency>
+            <!-- FIXME: configure slf4j-simple instead -->
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-log4j12</artifactId>
             <scope>test</scope>
         </dependency>
+
         <dependency>
             <groupId>org.opendaylight.infrautils</groupId>
             <artifactId>infrautils-util</artifactId>
@@ -119,6 +110,11 @@
             <groupId>io.netty</groupId>
             <artifactId>netty-transport-native-epoll</artifactId>
             <!-- Explicitly bring in the linux classifier, test may fail on 32-bit linux -->
+            <!--
+                FIXME: I don't think this is a good idea. We should be platform-agnostic
+                       for build, so this works on Mac and others as well.
+                       x86-64 Linux is tested in CSIT, where this library is present
+             -->
             <classifier>linux-x86_64</classifier>
         </dependency>
     </dependencies>
