--- a/features-aggregator/odl-openflowplugin-southbound/pom.xml
+++ b/features-aggregator/odl-openflowplugin-southbound/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.opendaylight.odlparent</groupId>
         <artifactId>single-feature-parent</artifactId>
-        <version>8.0.3</version>
+        <version>8.1.0-SNAPSHOT</version>
         <relativePath/>
     </parent>
 
@@ -29,14 +29,14 @@
             <dependency>
                 <groupId>org.opendaylight.controller</groupId>
                 <artifactId>controller-artifacts</artifactId>
-                <version>3.0.4</version>
+                <version>3.0.5-SNAPSHOT</version>
                 <scope>import</scope>
                 <type>pom</type>
             </dependency>
             <dependency>
                 <groupId>org.opendaylight.infrautils</groupId>
                 <artifactId>infrautils-artifacts</artifactId>
-                <version>1.9.4</version>
+                <version>1.9.5-SNAPSHOT</version>
                 <scope>import</scope>
                 <type>pom</type>
             </dependency>
