--- a/features/odl-openflowplugin-southbound/pom.xml
+++ b/features/odl-openflowplugin-southbound/pom.xml
@@ -20,30 +20,8 @@
             <!-- This project -->
             <dependency>
                 <groupId>org.opendaylight.openflowplugin</groupId>
-                <artifactId>openflowplugin-artifacts</artifactId>
+                <artifactId>openflowplugin-parent</artifactId>
                 <version>${project.version}</version>
-                <scope>import</scope>
-                <type>pom</type>
-            </dependency>
-            <!-- Controller infrastructure -->
-            <dependency>
-                <groupId>org.opendaylight.controller</groupId>
-                <artifactId>controller-artifacts</artifactId>
-                <version>10.0.9</version>
-                <scope>import</scope>
-                <type>pom</type>
-            </dependency>
-            <dependency>
-                <groupId>org.opendaylight.infrautils</groupId>
-                <artifactId>infrautils-artifacts</artifactId>
-                <version>7.1.2</version>
-                <scope>import</scope>
-                <type>pom</type>
-            </dependency>
-            <dependency>
-                <groupId>org.opendaylight.serviceutils</groupId>
-                <artifactId>serviceutils-artifacts</artifactId>
-                <version>0.14.2</version>
                 <scope>import</scope>
                 <type>pom</type>
             </dependency>
@@ -107,12 +85,6 @@
         <dependency>
             <groupId>org.opendaylight.openflowplugin</groupId>
             <artifactId>openflowplugin-extension-onf</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.opendaylight.serviceutils</groupId>
-            <artifactId>odl-serviceutils-srm</artifactId>
-            <classifier>features</classifier>
-            <type>xml</type>
         </dependency>
 
         <!-- config files -->
