--- a/applications/pom.xml
+++ b/applications/pom.xml
@@ -11,7 +11,7 @@
 
     <groupId>org.opendaylight.openflowplugin</groupId>
     <artifactId>applications-aggregator</artifactId>
-    <version>0.20.1</version>
+    <version>0.20.2-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <properties>
