--- a/features/features-openflowplugin/pom.xml
+++ b/features/features-openflowplugin/pom.xml
@@ -11,14 +11,14 @@
     <groupId>org.opendaylight.openflowplugin</groupId>
     <artifactId>features-openflowplugin</artifactId>
     <packaging>feature</packaging>
-    <version>0.20.1</version>
+    <version>0.20.2-SNAPSHOT</version>
 
     <dependencyManagement>
         <dependencies>
             <dependency>
                 <groupId>org.opendaylight.openflowplugin</groupId>
                 <artifactId>openflowplugin-artifacts</artifactId>
-                <version>0.20.1</version>
+                <version>0.20.2-SNAPSHOT</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
