--- a/features/odl-openflowjava-protocol/pom.xml
+++ b/features/odl-openflowjava-protocol/pom.xml
@@ -11,7 +11,7 @@
 
     <groupId>org.opendaylight.openflowplugin.openflowjava</groupId>
     <artifactId>odl-openflowjava-protocol</artifactId>
-    <version>0.20.1</version>
+    <version>0.20.2-SNAPSHOT</version>
     <packaging>feature</packaging>
 
     <!-- <name> formatting is used by autorelease to parse and notify projects on
