--- a/features/odl-openflowplugin-app-table-miss-enforcer/pom.xml
+++ b/features/odl-openflowplugin-app-table-miss-enforcer/pom.xml
@@ -11,7 +11,7 @@
     <groupId>org.opendaylight.openflowplugin</groupId>
     <artifactId>odl-openflowplugin-app-table-miss-enforcer</artifactId>
     <packaging>feature</packaging>
-    <version>0.20.1</version>
+    <version>0.20.2-SNAPSHOT</version>
 
     <name>OpenDaylight :: Openflow Plugin :: Application - table-miss-enforcer</name>
 
