--- a/features/odl-openflowplugin-onf-extensions/pom.xml
+++ b/features/odl-openflowplugin-onf-extensions/pom.xml
@@ -11,7 +11,7 @@
     <groupId>org.opendaylight.openflowplugin</groupId>
     <artifactId>odl-openflowplugin-onf-extensions</artifactId>
     <packaging>feature</packaging>
-    <version>0.20.1</version>
+    <version>0.20.2-SNAPSHOT</version>
 
     <name>OpenDaylight :: Openflow Plugin :: ONF Extensions</name>
 
