--- a/openflowjava/openflow-protocol-spi/pom.xml
+++ b/openflowjava/openflow-protocol-spi/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.opendaylight.openflowplugin.openflowjava</groupId>
         <artifactId>openflowjava-parent</artifactId>
-        <version>0.20.1</version>
+        <version>0.20.2-SNAPSHOT</version>
         <relativePath>../</relativePath>
     </parent>
     <artifactId>openflow-protocol-spi</artifactId>
