--- a/openflowplugin/pom.xml
+++ b/openflowplugin/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.opendaylight.openflowplugin</groupId>
         <artifactId>openflowplugin-parent</artifactId>
-        <version>0.20.1</version>
+        <version>0.20.2-SNAPSHOT</version>
         <relativePath>../parent</relativePath>
     </parent>
 
