--- a/features/odl-openflowjava-protocol/pom.xml
+++ b/features/odl-openflowjava-protocol/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.opendaylight.odlparent</groupId>
         <artifactId>single-feature-parent</artifactId>
-        <version>14.1.3</version>
+        <version>14.1.4</version>
         <relativePath/>
     </parent>
 
@@ -32,8 +32,8 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.opendaylight.mdsal.model</groupId>
-            <artifactId>odl-mdsal-model-rfc6991</artifactId>
+            <groupId>org.opendaylight.ietf</groupId>
+            <artifactId>odl-ietf-model-rfc6991</artifactId>
             <type>xml</type>
             <classifier>features</classifier>
         </dependency>
