--- a/extension/pom.xml
+++ b/extension/pom.xml
@@ -11,7 +11,7 @@
 
     <groupId>org.opendaylight.openflowplugin</groupId>
     <artifactId>openflowplugin-extension-aggregator</artifactId>
-    <version>0.21.0</version>
+    <version>0.21.1-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <properties>
