--- a/features/odl-openflowplugin-nsf-model/pom.xml
+++ b/features/odl-openflowplugin-nsf-model/pom.xml
@@ -11,7 +11,7 @@
     <groupId>org.opendaylight.openflowplugin</groupId>
     <artifactId>odl-openflowplugin-nsf-model</artifactId>
     <packaging>feature</packaging>
-    <version>0.21.0</version>
+    <version>0.21.1-SNAPSHOT</version>
 
     <name>OpenDaylight :: OpenflowPlugin :: NSF :: Model</name>
 
