--- a/openflowplugin-api/pom.xml
+++ b/openflowplugin-api/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.opendaylight.openflowplugin</groupId>
         <artifactId>openflowplugin-parent</artifactId>
-        <version>0.21.0</version>
+        <version>0.21.1-SNAPSHOT</version>
         <relativePath>../parent</relativePath>
     </parent>
 
