--- a/test-common/pom.xml
+++ b/test-common/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.opendaylight.openflowplugin</groupId>
         <artifactId>openflowplugin-parent</artifactId>
-        <version>0.21.0</version>
+        <version>0.21.1-SNAPSHOT</version>
         <relativePath>../parent</relativePath>
     </parent>
     <artifactId>test-common</artifactId>
